# sofarpc-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  README.zh-CN.md  go.mod  pom.xml  pyproject.toml  rpcctl-manifest.yaml
.github/workflows/: ci.yml  e2e.yml  mcpb.yml  release.yml  wire-fixtures.yml
cmd/sofarpc/: main.go
cmd/sofarpc-mcp/: main.go  main_test.go  profile.go  profile_test.go  setup.go  setup_project.go  setup_test.go  version.go  version_test.go
cmd/spike-invoke/: main.go
config/: contexts.yaml  metadata.yaml  rpcctl.yaml
docs/: 0.4-implementation-plan.md  architecture.md  greenfield-sofarpc-cli-design.md  improvement-plan.md  rewrite-pure-go.md  runtime-daemon-evaluation.md  sofarpc-cli-design.md  usage.md  usage.zh-CN.md
docs/adr/: 0001-wire-compatibility-golden-fixtures.md  0002-invocation-properties-redacted-replay.md  0003-target-profiles.md
docs/plans/: 2026-04-21-typed-arg-normalization.md  2026-05-16-contract-generics-overload-resolution.md  2026-05-16-wire-compatibility-golden-gate.md
docs/prototypes/: sofarpc-cli-balsamiq-wireframes.html  (+1 more)
greenfield/: go.mod
rpcctl-common/: pom.xml
rpcctl-launcher/: pom.xml
rpcctl-manifest-maven-plugin/: pom.xml
rpcctl-runtime-sofa/: pom.xml
runtime-worker-java/: pom.xml
scripts/: build-all-runtimes.sh  build-mcpb.sh  build.sh  dist.sh  e2e-common.sh  e2e-orbstack.sh  e2e-smoke.sh  install.ps1  install.sh  release.sh  verify-wire-fixtures.sh
sofarpc_cli/: __init__.py  config.py  project.py  util.py
spoon-indexer-java/: pom.xml
tests/: test_sofarpc_cli.py
(+402 files in other folders)
