[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sofarpc-cli"
version = "0.1.0"
description = "Python tooling and (eventually) CLI for SOFARPC invocation"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "hex1n" }]
license = { text = "MIT" }
dependencies = [
    "javalang>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
include = ["sofarpc_cli*"]
exclude = ["cmd*", "internal*", "runtime-worker-java*", "skills*", "bin*", "docs*", "e2e*"]
